# vvvst-dpf-rust

./: .cmake-format.json  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Cargo.toml  README.md  Rakefile  build.rs  cbindgen.toml  compile_flags.txt
.github/workflows/: build.yml
resources/: manifest.rc  vvvst.manifest
resources/editor_ext/: howtouse.md  licenses.generated.json  vstinfo.md
resources/installer/: desktop.ini  installer_base.nsi  vstinfo.md
src/: DistrhoPluginInfo.h  common.rs  ipc_model.rs  lib.rs  manager.rs  manager_main.rs  model.rs  plugin.cpp  plugin.hpp  plugin.rs  rust.generated.hpp  rust_bridge.cpp  rust_bridge.generated.cpp  rust_bridge.generated.hpp  rust_bridge.hpp  saturating_ext.rs  synthesizer.rs  ui.cpp  ui.rs  utils.rs  voice.rs  vst_common.rs
src/state/: mod.rs  v1.rs
xtask/: Cargo.toml
xtask/src/: main.rs
