[package]
name = "vvvst-dpf-rust"
version = "255.255.255"
edition = "2021"

[workspace]
members = ["xtask"]

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bincode = "1.3.3"
include_dir = "0.7.4"
mime_guess = "2.0.5"
raw-window-handle = "0.6.2"
rfd = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.128"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = [
  "io-util",
  "rt",
  "rt-multi-thread",
  "fs",
  "macros",
  "sync",
] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
wav_io = "0.1.14"
winit = "0.30.5"
wry = "0.45.0"

[lib]
crate-type = ["staticlib"]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.5.0"
