[package]
name = "vvvst"
version = "255.255.255"
edition = "2021"

[workspace]
members = ["xtask"]

[[bin]]
name = "engine-manager"
path = "src/manager_main.rs"

[dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bincode = "1.3.3"
cached = { version = "0.54.0", features = ["async", "tokio"] }
const-random = "0.1.18"
dirs = "5.0.1"
duplicate = "2.0.0"
fs-err = { version = "3.0.0", features = ["tokio"] }
fs4 = { version = "0.12.0", features = ["fs-err3-tokio", "tokio"] }
futures = "0.3.31"
include_dir = "0.7.4"
mime_guess = "2.0.5"
process_path = "0.1.4"
raw-window-handle = "0.6.2"
rfd = "0.15.0"
semver = "1.0.24"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.128"
tap = "1.0.1"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["io-util", "rt", "rt-multi-thread", "fs", "macros", "sync", "net", "signal", "process", "time"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
wav_io = "0.1.14"
webrtc = "0.12.0"
winit = "0.30.5"
wry = "0.46.3"
zstd = "0.13.2"

[lib]
crate-type = ["cdylib"]
name = "vvvst_impl"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"

[dev-dependencies]
rstest = "0.23.0"
