[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
cargo-about = "0.6.4"
cargo_toml = "0.20.5"
cbindgen = "0.27.0"
clap = { version = "4.5.19", features = ["derive"] }
duct = "0.13.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
