[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
cargo-about = "0.6.4"
cargo_toml = "0.20.5"
cbindgen = "0.27.0"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
dirs = "6.0.0"
duct = "0.13.7"
fs-err = "3.1.0"
krates = "0.17.5"
lazy-regex = "3.3.0"
notify = "7.0.0"
semver = "1.0.24"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ureq = "3.0.4"
